--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "league/fractal": "^0.17.0",
+        "prettus/l5-repository": "^2.6",
+        "robclancy/presenter": "^1.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
